@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-08-21T01:34:41Z",
-  "count_outdated" : 8221,
-  "uniques_outdated" : 3662,
+  "timestamp" : "2024-08-22T01:36:33Z",
+  "count_outdated" : 8223,
+  "uniques_outdated" : 3664,
   "count" : 8253,
   "uniques" : 3689,
   "clones" : [
-    {
-      "timestamp": "2024-08-07T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2024-08-08T00:00:00Z",
       "count": 1,
