@@ -1,12 +1,7 @@
 {
-  "count": 32,
-  "uniques": 23,
+  "count": 30,
+  "uniques": 22,
   "clones": [
-    {
-      "timestamp": "2024-08-07T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2024-08-08T00:00:00Z",
       "count": 1,
