@@ -1,3 +1,12 @@
+2024-08-22T01:36:33Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10500301901 # 482
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-22
+* notice: last 14d: unq all: 22 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 3662 8221 / 3689 8253
+* notice: next accum: outdated-unq outdated-all / unq all: 3664 8223 / 3689 8253
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-08-07] / []
+
 2024-08-21T01:34:41Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10481951991 # 480
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-21
